# free-webui

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: access.py  account.py  admin_access.py  admin_analytics.py  admin_connections.py  admin_feedback.py  admin_models.py  admin_permissions.py  admin_users.py  anthropic_compat.py  api_keys.py  appearance.py  audio.py  audit.py  auth.py  banners.py  broadcaster.py  channels.py  code_exec.py  collections.py  config.py  connections.py  conversations.py  database.py  db.py  documents.py  evaluations.py  files.py  folders.py  images.py  main.py  mcp.py  memories.py  netguard.py  notes.py  objectstore.py  oidc.py  openai_compat.py  openapi_tools.py  permissions.py  (+12 more)
backend/example_plugins/: clamp_and_redact.py
backend/tests/: conftest.py  test_access.py  test_account.py  test_admin_analytics.py  test_admin_feedback.py  test_admin_models.py  test_admin_users.py  test_anthropic_compat.py  test_api_keys.py  test_appearance.py  test_audio.py  test_audit.py  test_auth.py  test_banners.py  test_broadcaster.py  test_channels.py  test_channels_redis.py  test_channels_ws.py  test_citations.py  test_clone.py  test_code_exec.py  test_collections.py  test_connections.py  test_context_budget.py  test_conversations.py  test_conversations_phase2.py  test_conversations_streaming.py  test_database.py  test_db.py  test_disconnect_abort.py  test_evaluations.py  test_export.py  test_extract_office.py  test_files.py  test_folders.py  test_full_context.py  test_images.py  (+27 more)
(+89 files in other folders)
