[project]
name = "free-webui-backend"
version = "0.0.1"
description = "FastAPI backend for free-webui"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "aiosqlite>=0.20",
    "argon2-cffi>=23.1",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "pypdf>=5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv"]

[tool.ruff.lint]
# Conservative high-signal set: pyflakes (unused imports, undefined names) +
# the pycodestyle runtime-error subset. Ratchet up (E, I, UP, B) over time.
select = ["F", "E9"]
